    * Usability improvements for the Ampache service settings dialog.
    * Length and size of queued tracks are now shown in the statusbar tooltip. (BR 144471)
    * Improved Cover fetching. Changed Dialog so the user can select from
      possible covers.
    * Improved guessing tags from filename. Added preview to Dialog.
    * Display frames around lyrics/video applets for indicating focus.

  BUGFIXES:
    * Fixed any open menus or popus getting closed when the OSD is shown.
    * Fixed copies of default layouts getting created even if just using the
      inline editor to change track metadata.
    * Fixed inline playlist editor saving values that had been edited but
      where the value had not actually changed.
    * Pressing enter now correctly applies changes in the playlist inline
      editor. (BR 215924)
    * The volume slider in the Slim Toolbar would sometimes work incorrectly
      after startup. (BR 215185)
    * Fixed popup for showing the progress of multiple taks not working.
    * Made dragging from podcast list to external program work. (BR 212343)
    * Made dragging from the Last.fm service directly to the playlist work.
      (BR 215494)
    * Fixed crash during copying to collection with custom file naming schemes
      where a component would be empty. (BR 211518)
    * Magnatune.com store: Fixed incorrect download urls for non english 
      languages. (BR 212126)
    * Magnatune.com store: Fixed membership type not remembered when running 
      a non english Amarok. (BR 195427)
    * Support for "title:" token in the collection search. Patch by Roberto
      Bertolusso <rbertolusso@yahoo.com>. (BR 211249)
    * Fixed lots of memory leaks reported by Valgrind.
    * Made lyrics applet colours presentable with bright and dark colour
      styles. (BR 214930)
    * Made sure random mode works if repeat is on. (BR 214559)
    * Fixed random mode behaviour when "going back". (BR 208892)
    * Made random mode work. (BR 212910)