@@ -42,6 +42,7 @@ VERSION 2.2.2
       possible covers.
     * Improved guessing tags from filename. Added preview to Dialog.
     * Display frames around lyrics/video applets for indicating focus.
+    * Improved keyboard functions when editing lyrics from the applet.
 
   BUGFIXES:
     * Fixed any open menus or popus getting closed when the OSD is shown.
